--- a/AsistenciaApp/nbproject/project.properties
+++ b/AsistenciaApp/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AsistenciaApp
 excludes=
 file.reference.postgresql-42.5.0.jar=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.0.jar-1=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-42.5.0.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.postgresql-42.5.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
