--- a/AsistenciaApp/nbproject/private/private.properties
+++ b/AsistenciaApp/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.postgresql-42.5.0.jar=C:\\Users\\Diego\\Downloads\\postgresql-42.5.0.jar
-user.properties.file=C:\\Users\\Diego\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\angel\\AppData\\Roaming\\NetBeans\\15\\build.properties
