--- a/AsistenciaApp/nbproject/project.properties
+++ b/AsistenciaApp/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.output=${dist.jlink.dir}/AsistenciaApp
 excludes=
 file.reference.postgresql-42.5.0.jar=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
 file.reference.postgresql-42.5.0.jar-1=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.0.jar-2=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-42.5.0.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.postgresql-42.5.0.jar-1}
+    ${file.reference.postgresql-42.5.0.jar-1}:\
+    ${file.reference.postgresql-42.5.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
