--- a/AsistenciaApp/nbproject/private/private.properties
+++ b/AsistenciaApp/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 compile.on.save=true
-file.reference.postgresql-42.5.0.jar=C:\\Users\\Admin\\Downloads\\postgresql-42.5.0.jar
-file.reference.postgresql-42.5.0.jar-1=C:\\Users\\Admin\\Downloads\\postgresql-42.5.0.jar
-user.properties.file=C:\\Users\\angel\\AppData\\Roaming\\NetBeans\\15\\build.properties
+file.reference.postgresql-42.5.0.jar=C:\\Users\\Diego\\Documents\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.0.jar-1=C:\\Users\\Diego\\Documents\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.0.jar-2=C:\\Users\\Diego\\Documents\\postgresql-42.5.0.jar
+user.properties.file=C:\\Users\\Diego\\AppData\\Roaming\\NetBeans\\15\\build.properties
