--- a/AsistenciaApp/nbproject/project.properties
+++ b/AsistenciaApp/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.postgresql-42.5.0.jar=C:\\Users\\angel\\Downloads\\postgresql-42.
 file.reference.postgresql-42.5.0.jar-1=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
 file.reference.postgresql-42.5.0.jar-2=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
 file.reference.postgresql-42.5.0.jar-3=C:\\Users\\Admin\\Downloads\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.0.jar-4=C:\\Users\\angel\\Downloads\\postgresql-42.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +45,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.postgresql-42.5.0.jar-1}:\
     ${file.reference.postgresql-42.5.0.jar-2}:\
-    ${file.reference.postgresql-42.5.0.jar-3}
+    ${file.reference.postgresql-42.5.0.jar-3}:\
+    ${file.reference.postgresql-42.5.0.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
